--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,15 @@ services:
     command:
       ./entrypoint.sh --uri '${QDRANT_BOOTSTRAP_NODE_URI}'
     healthcheck:
-      test: ["CMD", "curl", "${QDRANT_HEALTHCHECK_NODE_URI}"]
+      test: ["CMD", "curl", "-f", "${QDRANT_HEALTHCHECK_NODE_URI}"]
       interval: 30s
       timeout: 10s
       retries: 5
+      start_period: 10s
 
   qdrant-node-2:
     image: qdrant/qdrant:${QDRANT_VERSION}
     container_name: qdrant-node-2
-    ports:
-      - "6335:6333"  # REST API for node 2 (mapped to a different host port)
-      - "6336:6334"  # Internal cluster communication for node 2
     networks:
       - qdrant-cluster
     volumes:
@@ -31,7 +29,7 @@ services:
       - ./configs/node1.yaml:/qdrant/config/config.yaml
     depends_on:
       qdrant-node-1:
-        condition: service_healthy
+        condition: service_started
     command:
       ./entrypoint.sh --bootstrap '${QDRANT_BOOTSTRAP_NODE_URI}'
 
