--- a/configs/node2.yaml
+++ b/configs/node2.yaml
@@ -295,7 +295,7 @@ service:
 
 cluster:
   # Use `enabled: true` to run Qdrant in distributed deployment mode
-  enabled: false
+  enabled: true 
 
   # Configuration of the inter-cluster communication
   p2p:
@@ -317,28 +317,4 @@ cluster:
 # Set to true to prevent service from sending usage statistics to the developers.
 # Read more: https://qdrant.tech/documentation/guides/telemetry
 telemetry_disabled: false
-
-# TLS configuration.
-# Required if either service.enable_tls or cluster.p2p.enable_tls is true.
-tls:
-  # Server certificate chain file
-  cert: ./tls/cert.pem
-
-  # Server private key file
-  key: ./tls/key.pem
-
-  # Certificate authority certificate file.
-  # This certificate will be used to validate the certificates
-  # presented by other nodes during inter-cluster communication.
-  #
-  # If verify_https_client_certificate is true, it will verify
-  # HTTPS client certificate
-  #
-  # Required if cluster.p2p.enable_tls is true.
-  ca_cert: ./tls/cacert.pem
-
-  # TTL in seconds to reload certificate from disk, useful for certificate rotations.
-  # Only works for HTTPS endpoints. Does not support gRPC (and intra-cluster communication).
-  # If `null` - TTL is disabled.
-  cert_ttl: 3600
 
