--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
-QDRANT_VERSION="v1.12.3"
 QDRANT_BOOTSTRAP_NODE_URI="http://qdrant-node-1:6335"
 QDRANT_HEALTHCHECK_NODE_URI="http://qdrant-node-1:6333"
+QDRANT_VERSION="v1.12.3"
+
+QDRANT_PORT="6333"
+QDRANT_COLLECTION_NAME="oak"
+
+QDRANT_REPLICATION_FACTOR=2
+QDRANT_SHARD_NUMBER=3
+
+
+
