--- a/scripts/create_collection/Dockerfile
+++ b/scripts/create_collection/Dockerfile
@@ -3,10 +3,10 @@ FROM python:3.11-slim
 WORKDIR /app
 
 COPY requirements.txt .
+
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
-COPY ./app/main.py .
+COPY main.py .
 
-EXPOSE 8080
 
-CMD ["uvicorn", "main:app", "--host", "1.0.0.0", "--port", "8080"]
+CMD ["python", "main.py"]
