--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 QDRANT_BOOTSTRAP_NODE_URI="http://qdrant-node-1:6335"
-QDRANT_HEALTHCHECK_NODE_URI="http://qdrant-node-1:6333"
 QDRANT_VERSION="v1.12.3"
 
 QDRANT_HOST="qdrant-node-1"
@@ -9,9 +8,11 @@ QDRANT_COLLECTION_NAME="oak"
 QDRANT_REPLICATION_FACTOR=2
 QDRANT_SHARD_NUMBER=3
 
-SPARSE_MODEL_NAME="prithivida/Splade_PP_en_v1"
-DENSE_MODEL_NAME="BAAI/bge-large-en-v1.5"
-LATE_INTERACTION_MODEL_NAME="colbert-ir/colbertv2.0"
+SPARSE_MODEL_NAME="Qdrant/bm25"
+DENSE_MODEL_NAME="mixedbread-ai/mxbai-embed-large-v1"
+LATE_INTERACTION_MODEL_NAME="answerdotai/answerai-colbert-small-v1"
+
+FASTEMBED_CACHE_PATH="/app/models"
 
 SERVER_HOST="server"
 SERVER_PORT="8000"
