Allows splitting up embeddings generation
Embeddings generation is taking a long time, as I don't have a GPU and
have >1M documents. The code is now modularized so that I can run it in
chunks without losing progress (by passing different environment
variables) so that I can experiment a little with different models and
the like.

--- a/.env
+++ b/.env
@@ -8,11 +8,17 @@ QDRANT_COLLECTION_NAME="oak"
 QDRANT_REPLICATION_FACTOR=2
 QDRANT_SHARD_NUMBER=3
 
-SPARSE_MODEL_NAME="Qdrant/bm25"
-DENSE_MODEL_NAME="mixedbread-ai/mxbai-embed-large-v1"
+SPARSE_MODEL_NAME="Qdrant/bm42-all-minilm-l6-v2-attentions"
+DENSE_MODEL_NAME="BAAI/bge-small-en-v1.5"
 LATE_INTERACTION_MODEL_NAME="answerdotai/answerai-colbert-small-v1"
 
-FASTEMBED_CACHE_PATH="/app/models"
+FASTEMBED_CACHE_PATH="/app/data"
 
 SERVER_HOST="server"
 SERVER_PORT="8000"
+
+DATASET_INDEX_START=0
+DATASET_INDEX_END=10000
+SHOULD_UPSERT_POINTS=0
+
+
