--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ SERVER_HOST="server"
 SERVER_PORT="8000"
 
 DATASET_INDEX_START=0
-DATASET_INDEX_END=10000
+DATASET_INDEX_END=100000
 SHOULD_UPSERT_POINTS=0
 
 
