Adds more narrative to the readme for the setup

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ QDRANT_VERSION="v1.12.3"
 
 QDRANT_HOST="qdrant-node-1"
 QDRANT_PORT="6333"
-QDRANT_COLLECTION_NAME="oak"
+QDRANT_COLLECTION_NAME="arxiv_papers"
 
 QDRANT_REPLICATION_FACTOR=2
 QDRANT_SHARD_NUMBER=3
@@ -18,7 +18,7 @@ SERVER_HOST="server"
 SERVER_PORT="8000"
 
 DATASET_INDEX_START=0
-DATASET_INDEX_END=100000
-SHOULD_UPSERT_POINTS=0
+DATASET_INDEX_END=1000000
+SHOULD_UPSERT_POINTS=1
 
 
