Allows cached download of 100k points

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,17 +42,20 @@ services:
     build:
       context: ./scripts/create_embeddings/
       args:
-        # Set this to False if you want to generate the embeddings yourself. 
-        # Please note that this can take some time! 
-        # Reduce the 'DATASET_INDEX_END' number to something like 100 if you
-        # just want to get a small database up and running.
-        download_embeddings: False 
+        # Set this to False if you want to generate the embeddings yourself.
+        # Please note that there are currently only prebuilt embeddings for
+        # the 100k dataset, so if you change the 'DATASET_INDEX_END' in .env,
+        # you should set this to False for a faster build. 
+        download_embeddings: True 
     profiles: ["initialization"]
     volumes:
       - ./scripts/create_embeddings/main.py:/app/main.py
       - ./scripts/create_embeddings/data:/app/data
 
     env_file: ".env"
+    command: bash 
+    stdin_open: true  # For DEV
+    tty: true         # For DEV 
     networks:
       - qdrant-cluster
 
