Adds step to optionally download embeddings from Dropbox

--- a/scripts/create_embeddings/Dockerfile
+++ b/scripts/create_embeddings/Dockerfile
@@ -13,9 +13,6 @@ RUN mkdir -p data
 # Process to create filtered snapshot of data from https://www.kaggle.com/datasets/Cornell-University/arxiv?resource=download 
 # RUN wget https://www.dropbox.com/scl/fi/rbwb5drprqix2yt9vibo6/arxiv-metadata-oai-snapshot.json?rlkey=vjkh438u3v6zp9t8wjiyrh6qm&st=xcsi0uga&dl=1
 # RUN time jq -c '[inputs | {title, abstract}]' arxiv-snapshot.json > data.json
-RUN if [ "$download_embeddings" = "false" ] ; then wget -q -O data.json "https://www.dropbox.com/scl/fi/rn5lfieadbyvslh4avtb1/arxiv-snapshot-title-abstract.json?rlkey=az1bmgim0fdmskspfoney1pyb&st=nipl4mxq&dl=1"; else echo "Skipping dataset download" ; fi
-
-# Download points so that embeddings don't need to be generated, a process that can take hours.
-RUN if [ "$download_embeddings" = "true" ] ; then wget -q -O data/points00000000_00100000.pkl "https://www.dropbox.com/scl/fi/yrjdhkcm8xj79lshew3b9/points00000000_00100000.pkl?rlkey=ycxq6tmdhuj4234dxser9uuii&st=jxgmqyws&dl=1"; else echo "No embeddings downloaded" ; fi
+RUN wget -q -O data.json "https://www.dropbox.com/scl/fi/o32x38ju2o3cwkou86jo2/arxiv-snapshot-title-abstract.json?rlkey=03vs22ez0rs69sxn5x9ur5mut&st=erry2zt0&dl=1"
 
 CMD ["python", "main.py"]
